--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <header>
         <h1>CSS Snippet Cheatsheet</h1>
+        <p>Ever have trouble recalling the exact syntac for your favorite CSS code? 
+            Give it a permanent home and add it to this page! Select anys nippet below 
+            and it'll automatically select all of the code for you to copy.
+        </p>
     </header>
     <main>
-        <p>Ever have trouble recalling the exact syntac for your favorite CSS code? Give it a permanent home and add it to this page! Select anys nippet below and it'll automatically select all of the code for you to copy.</p>
         <section class="flexbox">
             <div>
                 <h2>Flexbox Row</h2>
