Added CSS for the flexboxes and cards and centered the footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class="flexbox">
-            <div>
+            <div class="card">
                 <h2>Flexbox Row</h2>
                 <p>Use these three properties to create a Flexbox row layout.</p>
                 <div>
@@ -29,7 +29,7 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <h2>Flexbox Column</h2>
                 <p>Use this to create a Flexbox column layout.</p>
                 <div>
@@ -40,7 +40,7 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <h2>CSS Grid Layout</h2>
                 <p>Build a 12-column layout using CSS Grid</p>
                 <div>
@@ -53,7 +53,7 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <h2>Linear Gradients</h2>
                 <p>This will create a background linear gradient from top to bottom.</p>
                 <div>
@@ -66,7 +66,7 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <h2>Box Transition Glow</h2>
                 <p>Use transition and box shadows to flow on hover.</p>
                 <div>
@@ -85,16 +85,16 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <h2>Overlay Card with Title</h2>
-            </div>
-            <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
-            <div>
-                <p>.card-header {
-                    position: relative;
-                    margin-top: -20px;
-                }
-                </p>
+                <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
+                <div>
+                    <p>.card-header {
+                        position: relative;
+                        margin-top: -20px;
+                    }
+                    </p>
+                </div>
             </div>
         </section>
     </main>
