--- a/index.html
+++ b/index.html
@@ -20,81 +20,88 @@
             <div class="card">
                 <h2>Flexbox Row</h2>
                 <p>Use these three properties to create a Flexbox row layout.</p>
-                <div>
-                    <p>.row {
-                        display: flex:
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
-                    </p>
-                </div>
+                <code>
+                    <pre>
+    .row {
+        display: flex:
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+                    </pre>
+                </code>
             </div>
             <div class="card">
                 <h2>Flexbox Column</h2>
                 <p>Use this to create a Flexbox column layout.</p>
-                <div>
-                    <p>.column {
-                        display: flex:
-                        flex-direction: column;
-                    }
-                    </p>
-                </div>
+                <code>
+                    <pre>
+    .column {
+        display: flex:
+        flex-direction: column;
+    }
+                    </pre>
+                </code>
             </div>
             <div class="card">
                 <h2>CSS Grid Layout</h2>
                 <p>Build a 12-column layout using CSS Grid</p>
-                <div>
-                    <p>.grid {
-                        display: grid:
-                        width: 100%;
-                        grid-template-columns:
-                    repeat(12, 1fr);
-                    }
-                    </p>
-                </div>
+                <code>
+                    <pre>
+    .grid {
+        display: grid:
+        width: 100%;
+        grid-template-columns:
+        repeat(12, 1fr);
+    }
+                    </pre>
+                </code>
             </div>
             <div class="card">
                 <h2>Linear Gradients</h2>
                 <p>This will create a background linear gradient from top to bottom.</p>
-                <div>
-                    <p>.linear-gradient-background {
-                        background-image: linear-gradient(
-                            rgba(232, 102, 2365, 0.3) 0%,
-                            rgba(232, 102, 236, 0.6) 100%
-                        );
-                    }
-                    </p>
-                </div>
+                <code>
+                    <pre>
+    .linear-gradient-background {
+        background-image: linear-gradient(
+            rgba(232, 102, 2365, 0.3) 0%,
+            rgba(232, 102, 236, 0.6) 100%
+        );
+    }
+                    </pre>
+                </code>
             </div>
             <div class="card">
                 <h2>Box Transition Glow</h2>
                 <p>Use transition and box shadows to flow on hover.</p>
-                <div>
-                    <p>.code-card .card-header {
-                        border-radius: 8px;
-                        transition: all 0.5s ease-in-out;
-                    }
-                    </p>
-                    <p>.code-card: hover,
-                        .code-card:hover .card-header {
-                            box-shadow: inset 0px 0px 8px
-                            rgba (232, 102, 236, 1), 0 0 15px
-                            rgba (232, 102, 236, 1);
-                        }
-                    }
-                    </p>
-                </div>
+                <code>
+                    <pre>
+    .code-card .card-header {
+        border-radius: 8px;
+        transition: all 0.5s ease-in-out;
+    }
+                    </pre>
+                    <pre>
+    .code-card: hover,
+        .code-card:hover .card-header {
+            box-shadow: inset 0px 0px 8px
+            rgba (232, 102, 236, 1), 0 0 15px
+            rgba (232, 102, 236, 1);
+        }
+    }
+                    </pre>
+                </code>
             </div>
             <div class="card">
                 <h2>Overlay Card with Title</h2>
                 <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
-                <div>
-                    <p>.card-header {
-                        position: relative;
-                        margin-top: -20px;
-                    }
-                    </p>
-                </div>
+                <code>
+                    <pre>
+    .card-header {
+        position: relative;
+        margin-top: -20px;
+    }
+                    </pre>
+                </code>
             </div>
         </section>
     </main>
